fix: fix pills misalignment on smaller resolutions

--- a/src/components/Common/Pill.css
+++ b/src/components/Common/Pill.css
@@ -10,6 +10,10 @@
   text-transform: uppercase;
 }
 
+.Pill__Link {
+  display: flex;
+}
+
 .Pill svg {
   margin-right: 0.25em;
 }
